Bug 83184 - Screen flickering at low resolution when monitor is attached via VGA dongle to DVI port
Summary: Screen flickering at low resolution when monitor is attached via VGA dongle t...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-28 08:49 UTC by Rainer König
Modified: 2014-09-10 06:43 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg output with drm debug information (95.06 KB, text/plain)
2014-08-28 08:49 UTC, Rainer König
no flags Details
fix display connector configuration (1.10 KB, patch)
2014-09-08 18:00 UTC, Alex Deucher
no flags Details | Splinter Review

Description Rainer König 2014-08-28 08:49:04 UTC
Created attachment 105377 [details]
dmesg output with drm debug information

Encountered a strange problem with Radeon HD 6250 (or HD 6310) on a Fujitsu D3003-S1x mainboard. Occurs with every tested linux distribution and older and newer kernels. 

Problem occurs only when a monitor is attached via VGA to the DVI port. If the monitor is attached via DVI then the problem does not occur.

Problem is that
- Monitor is flickering sporadically 
- Monitor resolution is fixed to 1024x768 instead of higher resolutions that are possible
- xrandr shows 2 monitors while just one monitor is attached

Tried to debug this with kernel parameter drm.debug=14 (dmesg log is attached) and found the following messages that would explain the flickering screen.

[    4.098364] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off DVI-I-1
[    4.098369] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of VGA-1
[    4.219817] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off VGA-1
[    4.219830] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of DVI-I-1
[    4.231344] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off DVI-I-1
[    4.231350] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of VGA-1
[   13.949336] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off VGA-1
[   13.949350] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of DVI-I-1
[   13.967886] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off DVI-I-1
[   13.967891] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of VGA-1
[   14.023332] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off VGA-1
[   14.023345] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of DVI-I-1
[   14.056688] [drm:radeon_connector_analog_encoder_conflict_solve] 1: conflicting encoders switching off DVI-I-1
[   14.056694] [drm:radeon_connector_analog_encoder_conflict_solve] in favor of VGA-1

The problem is still to find the root cause that leads to the issue of having "conflicting encoders". Any idea what could cause this behaviour?

Regards
Rainer
Comment 1 Alex Deucher 2014-08-28 13:34:00 UTC
What physical connectors are actually on your board?  The vbios seems to think there is a VGA port and a DVI-I port.  If that does not match reality, we may need to add a quirk for your card to fix it.
Comment 2 Rainer König 2014-08-29 05:34:36 UTC
We have the following physical connectors on board:

- 1 Display Port connector
- 1 DVI-I connector (which is used with a DVI->VGA dongle when the problem occurs)
- 1 DP to LVDS connector

A detailled technical spec is available here:
ftp://ftp.ts.fujitsu.com/pub/Mainboard-OEM-Sales/Products/Mainboards/Industrial&ExtendedLifetime/D3003-S/Documentation_D3003-S/TechNotes/TechNotes_V3.1_Mini-ITX_D3003-S.pdf
Comment 3 Alex Deucher 2014-09-08 18:00:11 UTC
Created attachment 105905 [details] [review]
fix display connector configuration

Does the attached patch fix the issue?
Comment 4 Rainer König 2014-09-10 06:43:07 UTC
The attached patch works perfect. Issue is fixed. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.